finalize group state
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>